--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12232,7 +12232,10 @@ input[type="number"] {
 }
 
 @media only screen and (max-width: 970px) {
-  .cat-container{
+
+  .splide--draggable:first-child{
+  }
+  .widget-car-service .cat-container{
     margin-top: 83px;
   }
   .mobile-header-bar {
