--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7139,6 +7139,8 @@ a.mapboxgl-ctrl-logo {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
+  z-index: 10;
 }
 .widget-banner-car-listing::before {
   top: 0;
@@ -10817,6 +10819,27 @@ a.mapboxgl-ctrl-logo {
 ul[aria-label="Pagination"] {
   justify-content: center;
 }
+
+.widget-banner-car-listing.banner-car-listing-list::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Black with 50% opacity */
+  z-index: 1; /* Make sure the overlay is above the content */
+  pointer-events: none; /* Allow interaction with underlying elements */
+}
+
+.widget-banner-car-listing.banner-car-listing-list{
+  background: url("/assets/images/slide/bg-sign.png");
+  background-position: center;
+  background-size: cover;
+  color: white;
+}
+
+
 
 @media only screen and (max-width: 500px) {
   .widget-tf-slider .slider-wrap .tf-slide-item .slide-item-image {
