--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9931,7 +9931,7 @@ a.mapboxgl-ctrl-logo {
   }
 }
 @media only screen and (max-width: 991px) {
-  .banner-car-listing .title{
+  .banner-car-listing .title {
     font-size: 40px;
   }
   .listing-list-car-wrap .showing {
@@ -9943,8 +9943,8 @@ a.mapboxgl-ctrl-logo {
     border-radius: 0px !important;
     padding-top: 70px !important;
     padding-bottom: 70px !important;
-    padding-left: 20px!important;
-    padding-right: 20px!important;
+    padding-left: 20px !important;
+    padding-right: 20px !important;
   }
   .modal-close-btn {
     top: 60px !important;
@@ -10245,10 +10245,10 @@ a.mapboxgl-ctrl-logo {
     width: 100% !important;
   }
 
-  .pad-left{
+  .pad-left {
     padding-left: 15px;
   }
-  .pad-right{
+  .pad-right {
     padding-right: 15px;
   }
   .index-slider-items {
@@ -12810,38 +12810,62 @@ nav[aria-label="pagination navigation"] > ul > li > button.Mui-selected:hover {
   background: url("/assets/images/page-list/bus.webp");
 }
 
-.forklift-bg{
+.forklift-bg {
   background: url("/assets/images/page-list/forklift.webp");
 }
 
-.services-bg{
+.services-bg {
   background: url("/assets/images/page-list/transport.webp");
 }
 
-.truckUnder-bg{
+.truckUnder-bg {
   background: url("/assets/images/page-list/truckunder.webp");
 }
-.sp-bg{
+.sp-bg {
   background: url("/assets/images/page-list/sp.webp");
 }
-.trailer-bg{
+.trailer-bg {
   background: url("/assets/images/page-list/trailer.webp");
 }
 
-.css-10o2lyd-MuiStack-root>.MuiTextField-root, 
-.css-10o2lyd-MuiStack-root>.MuiPickersTextField-root{
+.css-10o2lyd-MuiStack-root > .MuiTextField-root,
+.css-10o2lyd-MuiStack-root > .MuiPickersTextField-root {
   width: 100%;
 }
 
-.modal-ok-btn{
+.modal-ok-btn {
   background-color: transparent;
   color: red;
-
 }
 
-.modal-desc{
+.modal-desc {
   text-align: center;
   font-size: 24px;
   margin-bottom: 20px;
   color: black;
+}
+
+.form-group-multiple {
+}
+
+.form-group.triple {
+  grid-template-columns: 1fr 1fr 1fr;
+  display: grid;
+}
+
+.form-group.multiple {
+  gap: 30px;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
+
+label.model-checkbox{
+  justify-content: center;
+  margin-bottom: 0px!important;
+  color: #86898e;
+  margin-left: 0px;
+}
+
+.sign-inputs .MuiOutlinedInput-root{
+  border-radius: 10px!important;
 }
